[package]
name = "advent_of_code_2018"
version = "0.1.0"
edition = "2021"
authors = ["Alain Jean PARES (ajp@p997.net"]

[dependencies]
aoc-runner = "0.3.0"
aoc-runner-derive = "0.3.0"
regex = "1.10.2"
md5 = "0.7.0"
itertools = "0.13.0"
petgraph = "0.6.4"
crossterm = "0.28.1"

[dev-dependencies]
cargo-aoc = "0.3.7"

[[bin]]
name = "aoc"
path = "src/main.rs"
